# 3d-cube

./: CMakeLists.txt  Makefile
include/: input.h  main.h
src/: input.c  main.c
